refactor: code clean (#20)